--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # _config.yml
 
 # required, replace with your own information -----
-title: Hello for Github Pages
+title: Nehal Islam
 author: Sara Gong
 description: > 
-  A minimalist template for designing a personal GitHub Pages website - without typing a single line of code.
+  A professional and personal website.
 baseurl: ""
 
 plugins:
