--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 # required, replace with your own information -----
 title: Nehal Islam
-author: Sara Gong
+author: 
 description: > 
   A professional and personal website.
 baseurl: ""
