--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 title: Nehal Islam
 author: 
 description: > 
-  A professional and personal website.
+  A professional & personal website.
 baseurl: ""
 
 plugins:
